--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -32,11 +32,24 @@
             <table
             class="table table-striped product-page-features-table">
               <tbody>
+              <!--<tr>-->
+                <!--<td>Rent: <%#= @product.rent %></td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>Price: <%#= @product.price_in_rupees %></td>-->
+              <!--</tr>-->
+
               <tr>
-                <td>Rent: <%= @product.rent %></td>
+                <td>Per Hour Price: <%= @product.per_hour_price %></td>
               </tr>
               <tr>
-                <td>Price: <%= @product.price_in_rupees %></td>
+                <td>Per Day Price: <%= @product.per_day_price %></td>
+              </tr>
+              <tr>
+                <td>Per Week Price: <%= @product.per_week_price %></td>
+              </tr>
+              <tr>
+                <td>Per Month Price: <%= @product.per_month_price %></td>
               </tr>
               <tr>
                 <td>State: <%= @product.state.name %></td>
