--- a/app/views/customer/services/show.html.erb
+++ b/app/views/customer/services/show.html.erb
@@ -91,18 +91,44 @@
             <p><%= @service.location %></p>
           </div>
         </div>
+
         <div class="col-sm-12">
           <div class="product-detail">
-            <h4>Price type:</h4>
-            <p><%= @service.price_type %></p>
+            <h4>Per hour price:</h4>
+            <p><%= @service.per_hour_price %></p>
           </div>
         </div>
         <div class="col-sm-12">
           <div class="product-detail">
-            <h4>Price in rupees:</h4>
-            <p><%= @service.price_in_rupees %></p>
+            <h4>Per day price:</h4>
+            <p><%= @service.per_day_price %></p>
           </div>
         </div>
+        <div class="col-sm-12">
+          <div class="product-detail">
+            <h4>Per week price:</h4>
+            <p><%= @service.per_week_price %></p>
+          </div>
+        </div>
+        <div class="col-sm-12">
+          <div class="product-detail">
+            <h4>Per month price:</h4>
+            <p><%= @service.per_month_price %></p>
+          </div>
+        </div>
+
+        <!--<div class="col-sm-12">-->
+          <!--<div class="product-detail">-->
+            <!--<h4>Price type:</h4>-->
+            <!--<p><%#= @service.price_type %></p>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-sm-12">-->
+          <!--<div class="product-detail">-->
+            <!--<h4>Price in rupees:</h4>-->
+            <!--<p><%#= @service.price_in_rupees %></p>-->
+          <!--</div>-->
+        <!--</div>-->
         <div class="col-sm-12">
           <div class="product-detail">
             <h4>Youtube link:</h4>
