--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -71,8 +71,20 @@
                 <td>Quantity: <%= @product.quantity %></td>
               </tr>
               <tr>
-                <td>Rent: <%= @product.rent %></td>
+                <td>Per Hour Price: <%= @product.per_hour_price %></td>
               </tr>
+              <tr>
+                <td>Per Day Price: <%= @product.per_day_price %></td>
+              </tr>
+              <tr>
+                <td>Per Week Price: <%= @product.per_week_price %></td>
+              </tr>
+              <tr>
+                <td>Per Month Price: <%= @product.per_month_price %></td>
+              </tr>
+              <!--<tr>-->
+                <!--<td>Rent: <%#= @product.rent %></td>-->
+              <!--</tr>-->
               <tr>
                 <td>Refundable security: <%= @product.refundable_security %></td>
               </tr>
