--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -72,7 +72,7 @@
                       </h5>
                       <div class="product-caption-price">
                         <span class="product-caption-price-new">
-                          ₹<%= product.price_in_rupees %>
+                          ₹<%= product.per_hour_price %>
                         </span>
                       </div>
                     </div>
@@ -114,7 +114,7 @@
                       </h5>
                       <div class="product-caption-price">
                         <span class="product-caption-price-new">
-                          ₹<%= service.price_in_rupees %>
+                          ₹<%= service.per_hour_price %>
                         </span>
                       </div>
                     </div>
