--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -96,7 +96,7 @@
                     </h5>
                     <div class="product-caption-price">
                   <span class="product-caption-price-new">
-                    ₹<%= product.price_in_rupees %>
+                    ₹<%= product.per_hour_price %>
                   </span>
                     </div>
                   </div>
@@ -137,7 +137,7 @@
                     </h5>
                     <div class="product-caption-price">
                   <span class="product-caption-price-new">
-                    ₹<%= service.price_in_rupees %>
+                    ₹<%= service.per_hour_price %>
                   </span>
 
                     </div>
