--- a/app/views/customer/welcome/registration.html.erb
+++ b/app/views/customer/welcome/registration.html.erb
@@ -20,7 +20,7 @@
           <div class="form-group">
             <%= f.input :password_confirmation, class: 'form-control' %>
           </div>
-          <%= submit_tag 'Sign Up', class: 'btn btn-primary' %>
+          <%= submit_tag 'Submit', class: 'btn btn-primary' %>
       <%- end %>
     </div>
   </div>
