--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,8 +2,8 @@
   <header class="page-header">
     <h1 class="page-title"><%= @product.name.capitalize %></h1>
     <ol class="breadcrumb page-breadcrumb">
-      <li><a href="#"><%= @product.subcategory.category.name %></a></li>
-      <li><a href="#"><%= @product.subcategory.name %></a></li>
+      <li><a href="<%= category_path(@product.subcategory.category)%>"><%= @product.subcategory.category.name %></a></li>
+      <li><a href="<%= subcategory_path(@product.subcategory)%>"><%= @product.subcategory.name %></a></li>
     </ol>
   </header>
   <div class="row">
